now with working backup code

--- a/examples/settings.ini
+++ b/examples/settings.ini
@@ -22,11 +22,11 @@ EOT
 
 [SQLite]
 driver=SQLite
-database=data/address.db
+database=data/addresses.db
 
 [CSV]
 driver=CSV
-dbfile=data/address.csv
+dbfile=data/addresses.csv
 
 [DOMAINS]
 filters=<<LIST
