--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:                     CPAN-Testers-Data-Addresses
 version:                  0.03
-abstract:                 CPAN Testers Addresses Database Manager
+abstract:                 CPAN Testers Addresses Data Manager
 author:
   - Barbie <barbie@cpan.org>
 
@@ -40,7 +40,8 @@ no_index:
 
 resources:
   license:    http://dev.perl.org/licenses/
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Generator
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-Data-Addresses
+  repository: http://github.com/barbie/cpan-testers-data-addresses
 
 meta-spec:
    version:   1.4
