--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,7 @@ abstract:                 CPAN Testers Addresses Data Manager
 author:
   - Barbie <barbie@cpan.org>
 
-license:                  perl
+license:                  artistic_2
 distribution_type:        module
 installdirs:              site
 
