--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,7 @@ distribution_type:        module
 installdirs:              site
 
 requires:
+  perl:                             5.006
   Class::Accessor::Fast:            0
   CPAN::Testers::Common::DBUtils:   0
   Config::IniFiles:                 0
@@ -21,13 +22,12 @@ requires:
   Getopt::Long:                     0
   IO::File:                         0
 recommends:
-  Test::More:                       0.70
+  Test::CPAN::Meta:                 0
+  Test::CPAN::Meta::JSON:           0
   Test::Pod:                        1.00
   Test::Pod::Coverage:              0.08
-  Test::CPAN::Meta:                 0.12
-  Test::CPAN::Meta::JSON:           0.10
 build_requires:
-  Test::More:                       0.01
+  Test::More:                       0.70
 
 provides:
   CPAN::Testers::Data::Addresses:
