updated tests to use Test::Database

--- a/t/20attributes.ini
+++ b/t/20attributes.ini
@@ -1,15 +1,12 @@
 [MASTER]
-mailrc=t/01mailrc.txt
+mailrc=t/data/01mailrc.txt
+lastfile=t/_DBDIR/lastid.txt
 
 ; CPANSTATS (MySQL version) database configuration
 
 [CPANSTATS]
-driver=mysql
-database=cpanstats
-dbhost=localhost
-dbuser=dandan
-dbpass=d4nd4n
-
+driver=SQLite
+database=t/_DBDIR/test.db
 
 [BACKUPS]
 drivers=<<EOT
