--- a/examples/settings.ini
+++ b/examples/settings.ini
@@ -33,20 +33,21 @@ filters=<<LIST
 (web|gmx)\.de
 (aacom|free)\.fr
 (xs4all|demon)\.nl
+(nasa|nih)\.gov
+(net|org|com)\.(br|au|tw)
+(co|org)\.uk
+\w+\.edu
+(ne)\.jp
+mail\.(ru)
+gov\.(au)
+(ac|edu)\.(uk|jp|at|tw)
+(us\.ibm|example)\.com
 (ieee|no-ip|dyndns|cpan|perl|freebsd)\.org
 (verizon|gmx|comcast|earthlink|cox|usa|uklinux|eircom)\.net
 (yahoo|google|gmail|googlemail|mac|pair|rr|sun|aol)\.com
 (pobox|hotmail|ibm|onlinehome-server)\.com
-(net|org|com)\.(br|au|tw)
-(co|org)\.uk
-\w+\.edu
-(ac|edu)\.(uk|jp|at|tw)
-us\.ibm\.com
+blueyonder\.co\.uk
 shaw\.ca
 ath\.cx
 (rambler|mail)\.de
-(ne)\.jp
-(nasa|nih)\.gov
-mail\.(ru)
-gov\.(au)
 LIST
